MySql/src/DBMS/parser/sqlParser.java
// Generated from D:\CodeWork\Mini-DBMS\MySql\src\DBMS\parser\sql.g4 by ANTLR 4.1
package DBMS.parser;

import java.util.*;
import com.db.minidb.data.value.*;
import com.db.minidb.dict.type.*;
import DBMS.execute.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class sqlParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int KEY_ALTER = 1, KEY_AND = 2, KEY_AS = 3,
			KEY_CREATE = 4, KEY_DATABASE = 5, KEY_DELETE = 6, KEY_DOUBLE = 7,
			KEY_DROP = 8, KEY_EXISTS = 9, KEY_FOREIGN = 10, KEY_FROM = 11,
			KEY_IF = 12, KEY_IN = 13, KEY_INSERT = 14, KEY_INT = 15,
			KEY_INTO = 16, KEY_KEY = 17, KEY_NOT = 18, KEY_NULL = 19,
			KEY_ON = 20, KEY_OR = 21, KEY_PRIMARY = 22, KEY_REFERENCES = 23,
			KEY_SELECT = 24, KEY_SET = 25, KEY_STRING = 26, KEY_TABLE = 27,
			KEY_UPDATE = 28, KEY_USE = 29, KEY_VALUES = 30, KEY_WHERE = 31,
			IDENTIFIER = 32, INTIDENTI = 33, DOUBLEIDENTI = 34,
			STRINGIDENTI = 35, SINGLE_LINE_COMMENT = 36,
			MULTILINE_COMMENT = 37, SPACES = 38, SCOL = 39, DOT = 40,
			OPEN_PAR = 41, CLOSE_PAR = 42, COMMA = 43, STAR = 44, PLUS = 45,
			MINUS = 46, TILDE = 47, PIPE2 = 48, DIV = 49, MOD = 50, LT2 = 51,
			GT2 = 52, AMP = 53, PIPE = 54, LT = 55, LT_EQ = 56, GT = 57,
			GT_EQ = 58, EQ = 59, NOT_EQ = 60;
	public static final String[] tokenNames = { "<INVALID>", "KEY_ALTER",
			"KEY_AND", "KEY_AS", "KEY_CREATE", "KEY_DATABASE", "KEY_DELETE",
			"KEY_DOUBLE", "KEY_DROP", "KEY_EXISTS", "KEY_FOREIGN", "KEY_FROM",
			"KEY_IF", "KEY_IN", "KEY_INSERT", "KEY_INT", "KEY_INTO", "KEY_KEY",
			"KEY_NOT", "KEY_NULL", "KEY_ON", "KEY_OR", "KEY_PRIMARY",
			"KEY_REFERENCES", "KEY_SELECT", "KEY_SET", "KEY_STRING",
			"KEY_TABLE", "KEY_UPDATE", "KEY_USE", "KEY_VALUES", "KEY_WHERE",
			"IDENTIFIER", "INTIDENTI", "DOUBLEIDENTI", "STRINGIDENTI",
			"SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", "SPACES", "';'", "'.'",
			"'('", "')'", "','", "'*'", "'+'", "'-'", "'~'", "'||'", "'/'",
			"'%'", "'<<'", "'>>'", "'&'", "'|'", "'<'", "'<='", "'>'", "'>='",
			"'='", "'<>'" };
	public static final int RULE_start = 0, RULE_sqls = 1, RULE_sql_use = 2,
			RULE_sql_drop_table = 3, RULE_sql_drop_database = 4,
			RULE_sql_create_database = 5, RULE_sql_create_table = 6,
			RULE_col_type = 7, RULE_primary_col = 8, RULE_foreign_col = 9,
			RULE_sql_select = 10, RULE_sql_insert = 11, RULE_sql_update = 12,
			RULE_col_exp = 13, RULE_sql_delete = 14, RULE_sql_where = 15,
			RULE_tables = 16, RULE_colomns = 17, RULE_consts = 18,
			RULE_types = 19, RULE_compare = 20, RULE_bool_op = 21,
			RULE_op = 22, RULE_select_or_set = 23, RULE_subval = 24,
			RULE_val = 25, RULE_sub_bool_val = 26, RULE_bool_val = 27,
			RULE_expr = 28, RULE_colomn_name = 29, RULE_colomn_alias_name = 30,
			RULE_table_name = 31, RULE_table_alias_name = 32,
			RULE_database_name = 33, RULE_type_int = 34, RULE_type_double = 35,
			RULE_type_string = 36;
	public static final String[] ruleNames = { "start", "sqls", "sql_use",
			"sql_drop_table", "sql_drop_database", "sql_create_database",
			"sql_create_table", "col_type", "primary_col", "foreign_col",
			"sql_select", "sql_insert", "sql_update", "col_exp", "sql_delete",
			"sql_where", "tables", "colomns", "consts", "types", "compare",
			"bool_op", "op", "select_or_set", "subval", "val", "sub_bool_val",
			"bool_val", "expr", "colomn_name", "colomn_alias_name",
			"table_name", "table_alias_name", "database_name", "type_int",
			"type_double", "type_string" };

	@Override
	public String getGrammarFileName() {
		return "sql.g4";
	}

	@Override
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public sqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA,
				_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public SqlsContext sqls(int i) {
			return getRuleContext(SqlsContext.class, i);
		}

		public TerminalNode EOF() {
			return getToken(sqlParser.EOF, 0);
		}

		public List<SqlsContext> sqls() {
			return getRuleContexts(SqlsContext.class);
		}

		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_start;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof sqlVisitor)
				return ((sqlVisitor<? extends T>) visitor).visitStart(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KEY_CREATE)
						| (1L << KEY_DELETE)
						| (1L << KEY_DROP)
						| (1L << KEY_INSERT)
						| (1L << KEY_SELECT)
						| (1L << KEY_UPDATE) | (1L << KEY_USE))) != 0)) {
					{
						{
							setState(74);
							sqls();
							setState(75);
							match(SCOL);
						}
					}
					setState(81);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(82);
				match(EOF);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SqlsContext extends ParserRuleContext {
		public Sql_deleteContext sql_delete() {
			return getRuleContext(Sql_deleteContext.class, 0);
		}

		public Sql_drop_tableContext sql_drop_table() {
			return getRuleContext(Sql_drop_tableContext.class, 0);
		}

		public Sql_selectContext sql_select() {
			return getRuleContext(Sql_selectContext.class, 0);
		}

		public Sql_updateContext sql_update() {
			return getRuleContext(Sql_updateContext.class, 0);
		}

		public Sql_create_tableContext sql_create_table() {
			return getRuleContext(Sql_create_tableContext.class, 0);
		}

		public Sql_insertContext sql_insert() {
			return getRuleContext(Sql_insertContext.class, 0);
		}

		public Sql_create_databaseContext sql_create_database() {
			return getRuleContext(Sql_create_databaseContext.class, 0);
		}

		public Sql_useContext sql_use() {
			return getRuleContext(Sql_useContext.class, 0);
		}

		public Sql_drop_databaseContext sql_drop_database() {
			return getRuleContext(Sql_drop_databaseContext.class, 0);
		}

		public SqlsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_sqls;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof sqlVisitor)
				return ((sqlVisitor<? extends T>) visitor).visitSqls(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final SqlsContext sqls() throws RecognitionException {
		SqlsContext _localctx = new SqlsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sqls);
		try {
			setState(93);
			switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
					setState(84);
					sql_use();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
					setState(85);
					sql_drop_table();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
					setState(86);
					sql_drop_database();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
					setState(87);
					sql_create_database();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
					setState(88);
					sql_create_table();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
					setState(89);
					sql_select();
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
					setState(90);
					sql_insert();
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
					setState(91);
					sql_update();
				}
				break;

			case 9:
				enterOuterAlt(_localctx, 9);
				{
					setState(92);
					sql_delete();
				}
				break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sql_useContext extends ParserRuleContext implements
			ValueTree {
		public ValueBase value;

		@Override
		public void setValue(ValueBase value) {
			this.value = value;
		}

		@Override
		public ValueBase getValue() {
			return this.value;
		}

		public Database_nameContext database_name() {
			return getRuleContext(Database_nameContext.class, 0);
		}

		public TerminalNode KEY_USE() {
			return getToken(sqlParser.KEY_USE, 0);
		}

		public Sql_useContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_sql_use;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof sqlVisitor)
				return ((sqlVisitor<? extends T>) visitor).visitSql_use(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Sql_useContext sql_use() throws RecognitionException {
		Sql_useContext _localctx = new Sql_useContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sql_use);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(95);
				match(KEY_USE);
				setState(96);
				database_name();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sql_drop_tableContext extends ParserRuleContext
			implements ValueTree {
		public ValueBase value;

		@Override
		public void setValue(ValueBase value) {
			this.value = value;
		}

		@Override
		public ValueBase getValue() {
			return this.value;
		}

		public TerminalNode KEY_DROP() {
			return getToken(sqlParser.KEY_DROP, 0);
		}

		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class, 0);
		}

		public TerminalNode KEY_TABLE() {
			return getToken(sqlParser.KEY_TABLE, 0);
		}

		public Sql_drop_tableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_sql_drop_table;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof sqlVisitor)
				return ((sqlVisitor<? extends T>) visitor)
						.visitSql_drop_table(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Sql_drop_tableContext sql_drop_table()
			throws RecognitionException {
		Sql_drop_tableContext _localctx = new Sql_drop_tableContext(_ctx,
				getState());
		enterRule(_localctx, 6, RULE_sql_drop_table);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(98);
				match(KEY_DROP);
				setState(99);
				match(KEY_TABLE);
				setState(100);
				table_name();
				System.out.println("sql_drop_table");
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sql_drop_databaseContext extends ParserRuleContext
			implements ValueTree {
		public ValueBase value;

		@Override
		public void setValue(ValueBase value) {
			this.value = value;
		}

		@Override
		public ValueBase getValue() {
			return this.value;
		}

		public TerminalNode KEY_DROP() {
			return getToken(sqlParser.KEY_DROP, 0);
		}

		public Database_nameContext database_name() {
			return getRuleContext(Database_nameContext.class, 0);
		}

		public Sql_drop_databaseContext(ParserRuleContext parent,
				int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_sql_drop_database;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof sqlVisitor)
				return ((sqlVisitor<? extends T>) visitor)
						.visitSql_drop_database(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Sql_drop_databaseContext sql_drop_database()
			throws RecognitionException {
		Sql_drop_databaseContext _localctx = new Sql_drop_databaseContext(_ctx,
				getState());
		enterRule(_localctx, 8, RULE_sql_drop_database);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(103);
				match(KEY_DROP);
				setState(104);
				database_name();
				System.out.println("sql_drop_database");
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sql_create_databaseContext extends ParserRuleContext
			implements ValueTree {
		public ValueBase value;

		@Override
		public void setValue(ValueBase value) {
			this.value = value;
		}

		@Override
		public ValueBase getValue() {
			return this.value;
		}

		public Database_nameContext database_name() {
			return getRuleContext(Database_nameContext.class, 0);
		}

		public TerminalNode KEY_CREATE() {
			return getToken(sqlParser.KEY_CREATE, 0);
		}

		public Sql_create_databaseContext(ParserRuleContext parent,
				int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_sql_create_database;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof sqlVisitor)
				return ((sqlVisitor<? extends T>) visitor)
						.visitSql_create_database(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Sql_create_databaseContext sql_create_database()
			throws RecognitionException {
		Sql_create_databaseContext _localctx = new Sql_create_databaseContext(
				_ctx, getState());
		enterRule(_localctx, 10, RULE_sql_create_database);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(107);
				match(KEY_CREATE);
				setState(108);
				database_name();
				System.out.println("SQLCREATEDATABASE");
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sql_create_tableContext extends ParserRuleContext
			implements ValueTree {
		public ValueBase value;

		@Override
		public void setValue(ValueBase value) {
			this.value = value;
		}

		@Override
		public ValueBase getValue() {
			return this.value;
		}

		public List<Foreign_colContext> foreign_col() {
			return getRuleContexts(Foreign_colContext.class);
		}

		public Foreign_colContext foreign_col(int i) {
			return getRuleContext(Foreign_colContext.class, i);
		}

		public List<Col_typeContext> col_type() {
			return getRuleContexts(Col_typeContext.class);
		}

		public Primary_colContext primary_col() {
			return getRuleContext(Primary_colContext.class, 0);
		}

		public Col_typeContext col_type(int i) {
			return getRuleContext(Col_typeContext.class, i);
		}

		public TerminalNode KEY_CREATE() {
			return getToken(sqlParser.KEY_CREATE, 0);
		}

		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class, 0);
		}

		public TerminalNode KEY_TABLE() {
			return getToken(sqlParser.KEY_TABLE, 0);
		}

		public Sql_create_tableContext(ParserRuleContext parent,
				int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_sql_create_table;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof sqlVisitor)
				return ((sqlVisitor<? extends T>) visitor)
						.visitSql_create_table(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Sql_create_tableContext sql_create_table()
			throws RecognitionException {
		Sql_create_tableContext _localctx = new Sql_create_tableContext(_ctx,
				getState());
		enterRule(_localctx, 12, RULE_sql_create_table);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(111);
				match(KEY_CREATE);
				setState(112);
				match(KEY_TABLE);
				setState(113);
				table_name();
				setState(114);
				match(OPEN_PAR);
				setState(115);
				col_type();
				setState(120);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
				while (_alt != 2 && _alt != -1) {
					if (_alt == 1) {
						{
							{
								setState(116);
								match(COMMA);
								setState(117);
								col_type();
							}
						}
					}
					setState(122);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
				}
				setState(125);
				switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
				case 1: {
					setState(123);
					match(COMMA);
					setState(124);
					primary_col();
				}
					break;
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == COMMA) {
					{
						{
							setState(127);
							match(COMMA);
							setState(128);
							foreign_col();
						}
					}
					setState(133);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(134);
				match(CLOSE_PAR);
				System.out.println("SQL_CREATE_TABLE");
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Col_typeContext extends ParserRuleContext {
		public TerminalNode KEY_NOT() {
			return getToken(sqlParser.KEY_NOT, 0);
		}

		public Colomn_nameContext colomn_name() {
			return getRuleContext(Colomn_nameContext.class, 0);
		}

		public TypesContext types() {
			return getRuleContext(TypesContext.class, 0);
		}

		public TerminalNode KEY_NULL() {
			return getToken(sqlParser.KEY_NULL, 0);
		}

		public Col_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_col_type;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof sqlVisitor)
				return ((sqlVisitor<? extends T>) visitor).visitCol_type(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Col_typeContext col_type() throws RecognitionException {
		Col_typeContext _localctx = new Col_typeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_col_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(137);
				colomn_name();
				setState(138);
				types();
				setState(143);
				_la = _input.LA(1);
				if (_la == KEY_NOT || _la == KEY_NULL) {
					{
						setState(140);
						_la = _input.LA(1);
						if (_la == KEY_NOT) {
							{
								setState(139);
								match(KEY_NOT);
							}
						}

						setState(142);
						match(KEY_NULL);
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Primary_colContext extends ParserRuleContext {
		public List<Colomn_nameContext> colomn_name() {
			return getRuleContexts(Colomn_nameContext.class);
		}

		public TerminalNode KEY_PRIMARY() {
			return getToken(sqlParser.KEY_PRIMARY, 0);
		}

		public Colomn_nameContext colomn_name(int i) {
			return getRuleContext(Colomn_nameContext.class, i);
		}

		public TerminalNode KEY_KEY() {
			return getToken(sqlParser.KEY_KEY, 0);
		}

		public Primary_colContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_primary_col;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof sqlVisitor)
				return ((sqlVisitor<? extends T>) visitor)
						.visitPrimary_col(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Primary_colContext primary_col() throws RecognitionException {
		Primary_colContext _localctx = new Primary_colContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_primary_col);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(145);
				match(KEY_PRIMARY);
				setState(146);
				match(KEY_KEY);
				{
					setState(147);
					match(OPEN_PAR);
					setState(148);
					colomn_name();
					setState(153);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la == COMMA) {
						{
							{
								setState(149);
								match(COMMA);
								setState(150);
								colomn_name();
							}
						}
						setState(155);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(156);
					match(CLOSE_PAR);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Foreign_colContext extends ParserRuleContext {
		public TerminalNode KEY_REFERENCES() {
			return getToken(sqlParser.KEY_REFERENCES, 0);
		}

		public List<Colomn_nameContext> colomn_name() {
			return getRuleContexts(Colomn_nameContext.class);
		}

		public TerminalNode KEY_FOREIGN() {
			return getToken(sqlParser.KEY_FOREIGN, 0);
		}

		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class, 0);
		}

		public Colomn_nameContext colomn_name(int i) {
			return getRuleContext(Colomn_nameContext.class, i);
		}

		public TerminalNode KEY_KEY() {
			return getToken(sqlParser.KEY_KEY, 0);
		}

		public Foreign_colContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_foreign_col;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof sqlVisitor)
				return ((sqlVisitor<? extends T>) visitor)
						.visitForeign_col(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Foreign_colContext foreign_col() throws RecognitionException {
		Foreign_colContext _localctx = new Foreign_colContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_foreign_col);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(158);
				match(KEY_FOREIGN);
				setState(159);
				match(KEY_KEY);
				setState(160);
				colomn_name();
				setState(161);
				match(KEY_REFERENCES);
				setState(162);
				table_name();
				setState(163);
				colomn_name();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sql_selectContext extends ParserRuleContext {
		public SelectSet value;

		public TablesContext tables(int i) {
			return getRuleContext(TablesContext.class, i);
		}

		public TerminalNode KEY_SELECT() {
			return getToken(sqlParser.KEY_SELECT, 0);
		}

		public ColomnsContext colomns(int i) {
			return getRuleContext(ColomnsContext.class, i);
		}

		public Sql_whereContext sql_where() {
			return getRuleContext(Sql_whereContext.class, 0);
		}

		public List<TablesContext> tables() {
			return getRuleContexts(TablesContext.class);
		}

		public TerminalNode KEY_FROM() {
			return getToken(sqlParser.KEY_FROM, 0);
		}

		public List<ColomnsContext> colomns() {
			return getRuleContexts(ColomnsContext.class);
		}

		public Sql_selectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_sql_select;
